优化generator代码